--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Когнитивные искажения</title>
-
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+    <header class="header">
 
+    </header>
+
+    <main class="main">
+
+    </main>
+
+    <footer class="footer">
+
+    </footer>
 </body>
 </html>
