reafactor + finished header

--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Когнитивные искажения</title>
+    <title>Когнитивные искажения elig</title>
+
     <link rel="stylesheet" href="styles/style.css">
 </head>
-    <header class="header">
+<body>
+  <header class="bg-light pos-relative bg-img">
+    <div class="container">
+        <h1 class="mb-199">
+            Когнитивные
+            <br>
+            искажения
+            <br>
+            <span class="c-dark">в программировании</span>
+        </h1>
 
-    </header>
+        <img class="header-img" src="../images/main.png" alt="man works on computer">
+        
+        <div class="flex">
+          <p class="text-col mr-30">
+            Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.
+          </p>
 
-    <main class="main">
+          <div class="text-col">
+          <p>
+            Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.
+          </p>
+          <p>
+            Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.
+          </p>
+            <a class="btn btn-primary mt-24" href="#"><span class="uppercase">подробнее</span></a>
+          </div>
+        </div>
+    </div>
+  </header>
 
-    </main>
+  <main>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+  </main>
 
-    <footer class="footer">
+  <footer>
 
-    </footer>
+  </footer>
+
 </body>
 </html>
