finished video section

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,16 @@
   </header>
 
   <main>
-    <section></section>
+    <section>
+      <div class="container flex-column align-center">
+        <h2 class="mb-30 c-dark text-center">Что же это такое, 
+          <br>
+          <span class="mb-30 c-prime-orange">когнитивные искажения?</span>
+        </h2>
+        <p>Что такое когнитивные искажения. Petrovna Channel</p>
+        <iframe class="filter video" src="https://www.youtube.com/embed/jie9AizBqss" allowfullscreen></iframe>
+      </div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
