--- a/src/index.html
+++ b/src/index.html
@@ -4,63 +4,110 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="yandex-verification" content="62dd8b82a5bf39b3">
     <title>Когнитивные искажения elig</title>
-
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
-<body>
-  <header class="bg-light pos-relative bg-img">
+
+<body class="body">
+  <header class="pos-relative bg-img bg-light">
     <div class="container">
-        <h1 class="mb-199">
-            Когнитивные
-            <br>
-            искажения
-            <br>
-            <span class="c-dark">в программировании</span>
+        <h1 class="mb-200">
+          <span class="c-orange">
+          Когнитивные<br>
+          искажения<br>
+          </span>
+          в программировании
         </h1>
-
-        <img class="header-img" src="../images/main.png" alt="man works on computer">
-        
-        <div class="flex">
-          <p class="text-col mr-30">
-            Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.
-          </p>
-
-          <div class="text-col">
-          <p>
-            Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.
-          </p>
-          <p>
-            Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.
-          </p>
-            <a class="btn btn-primary mt-24" href="#"><span class="uppercase">подробнее</span></a>
-          </div>
+        <img class="header-img" src="../images/main.png" alt="Главная картинка">
+        <div class="d-flex">
+            <p class="col mr-30">Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. 
+                Но мы часто игнорируем целостную картинку. Некоторые из этих проблем малозаметны, некоторые существенны. 
+                Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.
+            </p> 
+            <div class="col">
+                <p>Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, 
+                    багам и бесконечному разочарованию.
+                </p>
+                <p>
+                    Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.
+                </p>
+                <a href="#navigation" class="mt-24 btn btn-primary"><span class="uppercase">подробнее</span></a>
+            </div>    
         </div>
     </div>
-  </header>
+</header>
 
-  <main>
+<main>
     <section>
-      <div class="container flex-column align-center">
-        <h2 class="mb-30 c-dark text-center">Что же это такое, 
-          <br>
-          <span class="mb-30 c-prime-orange">когнитивные искажения?</span>
-        </h2>
-        <p>Что такое когнитивные искажения. Petrovna Channel</p>
-        <iframe class="filter video" src="https://www.youtube.com/embed/jie9AizBqss" allowfullscreen></iframe>
-      </div>
+        <div class="container d-flex flex-column align-center">
+            <h2 class="mb-30 text-center">Что же это такое,
+              <br>
+              <span class="c-orange">
+                когнитивные искажения?
+              </span></h2>
+            <p class="mb-30">Что такое когнитивные искажения. Petrovna Channel</p>
+            <iframe class="video shadow" src="https://www.youtube.com/embed/jie9AizBqss" allowfullscreen></iframe>
+        </div>
     </section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-  </main>
+</section>
 
-  <footer>
+<section id="navigation" class="bg-dark">
+  <nav class="mt-m200 pt-200 container d-flex justify-between flex-wrap">
+    <div class="mr-30">
+      <h2 class="p-right10 f-size52">
+        <span class="c-orange">5 когнитивных
+        <br> искажений</span> 
+        <br>
+      <span class="c-white">
+          о существовании <br>
+          которых стоит <br> 
+          помнить</span>
+        </h2>
+    </div>
 
-  </footer>
+    <a href="#" class="card bg-light mr-10">
+      <p class="number">1</p>
+      <h3 class="c-orange">Эффект ИКЕА</h3>
+      <p class="c-dark">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+    </a>
 
+    <a href="#" class="card bg-light">
+      <p class="number">2</p>
+      <h3 class="c-orange">Преждевременная оптимизация</h3>
+      <p class="c-dark">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+    </a>
+
+    <a href="#" class="card bg-light mr-30 mt-20">
+      <p class="number">3</p>
+      <h3 class="c-orange">Искажение новизны</h3>
+      <p class="c-dark">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
+    </a>
+
+    <a href="#" class="card bg-light mt-20 mr-30">
+      <p class="number">4</p>
+      <h3 class="c-orange">Гиперболическое обесценивание</h3>
+      <p class="c-dark">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
+    </a>
+
+    <a href="#" class="card bg-light mt-20">
+      <p class="number">5</p>
+      <h3 class="c-orange">Ошибка планирования</h3>
+      <p class="c-dark">Неправильно рассчитывать время необходимое для завершения задачи.</p>
+    </a>
+  </nav>
+</section>
+
+<section></section>
+<section></section>
+<section></section>
+<section></section>
+<section></section>
+</main>
+
+<footer>
+
+</footer>
+   
 </body>
 </html>
