finished ikea-effect

--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
         </h2>
     </div>
 
-    <a href="#" class="card bg-light mr-10">
+    <a href="#ikea-effect" class="card bg-light mr-10">
       <p class="number">1</p>
       <h3 class="c-orange">Эффект ИКЕА</h3>
       <p class="c-dark">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
@@ -98,7 +98,30 @@
   </nav>
 </section>
 
-<section></section>
+<section id="ikea-effect" class="pos-relative bg-light bg-img">
+  <div class="container">
+    <div class="d-flex">
+      <div class="mr-30">
+        <img src="../images/1.png" alt="two people looking at computer">
+      </div>
+
+      <div class="mr-30">
+        <p class="c-dark-trans paragraph fs-24">Когнитивные искажения</p>
+        <h2 class="mb-30">Эффект ИКЕА</h2>
+        <p class="paragraph fs-34">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+      </div>
+    </div>
+    
+      <h3 class="heading-line c-white bg-brown uppercase">Как проявляется</h3>
+
+      <div class="d-flex mt-30">
+      <p class="col mr-30">Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
+      <p class="col">Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
+    </div>
+  </div>
+
+</section>
+
 <section></section>
 <section></section>
 <section></section>
