finished premature-optimization section

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
       <p class="c-dark">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
     </a>
 
-    <a href="#" class="card bg-light">
+    <a href="#premature-optimization" class="card bg-light">
       <p class="number">2</p>
       <h3 class="c-orange">Преждевременная оптимизация</h3>
       <p class="c-dark">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
@@ -105,7 +105,7 @@
         <img src="../images/1.png" alt="two people looking at computer">
       </div>
 
-      <div class="mr-30">
+      <div>
         <p class="c-dark-trans paragraph fs-24">Когнитивные искажения</p>
         <h2 class="mb-30">Эффект ИКЕА</h2>
         <p class="paragraph fs-34">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
@@ -119,10 +119,34 @@
       <p class="col">Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
     </div>
   </div>
-
 </section>
 
-<section></section>
+<section id="premature-optimization" class="pos-relative bg-brown bg-img">
+  <div class="container c-white">
+  <div class="d-flex">
+    <div class="mr-30">
+    <p class="paragraph fs-24 c-white-trans">Когнитивные искажения</p>
+    <h2 class="mb-30">Преждевременная оптимизация</h2>
+    <p class="paragraph fs-34">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+  </div>
+  <div>
+    <img src="../images/2.png" class="img shadow" alt="man with rocket on computer screen">
+  </div>
+  </div>
+  
+  <h3 class="heading-line c-brown bg-white"><span class="uppercase">как проявляется</span></h3>
+
+  <div class="d-flex mt-20">
+      <p class="col mr-30">Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора,
+          то автомобиль не станет быстрее.
+      </p>
+      <p class="col">Отличный пример: писать максимально подтюненный и высокопроизводительный код
+          для всего лишь экспериментального проекта.
+      </p>
+  </div>
+  </div>
+</section>
+
 <section></section>
 <section></section>
 <section></section>
