--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,7 @@
     <img src="../images/2.png" class="img shadow" alt="man with rocket on computer screen">
   </div>
   </div>
-  
+
   <h3 class="heading-line c-brown bg-white"><span class="uppercase">как проявляется</span></h3>
 
   <div class="d-flex mt-20">
@@ -147,7 +147,31 @@
   </div>
 </section>
 
-<section></section>
+<section id="distortion-of-novelty" class="pos-relative bg-light bg-img">
+  <div class="container">
+    <div class="d-flex">
+      <div class="mr-30">
+        <img src="../images/3.png" alt="man have an idea">
+      </div>
+
+      <div>
+        <p class="c-dark-trans paragraph fs-24">Когнитивные искажения</p>
+        <h2 class="mb-30">Искажение новизны</h2>
+        <p class="paragraph fs-34">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые</p>
+      </div>
+    </div>
+    
+      <h3 class="heading-line c-white bg-brown uppercase">Как проявляется</h3>
+
+      <div class="d-flex mt-20">
+      <p class="col mr-30">Часто это искажение настигает нас, когда нужно решение проблемы и… о!
+        Мы как раз только что решили подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!</p>
+      <p class="col">Часто это искажение настигает нас, когда нужно решение проблемы и… о!
+        Мы как раз только что решили подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!</p>
+    </div>
+  </div>
+</section>
+
 <section></section>
 <section></section>
 </main>
