--- a/src/index.html
+++ b/src/index.html
@@ -130,11 +130,11 @@
     <p class="paragraph fs-34">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
   </div>
   <div>
-    <img src="../images/2.png" class="img shadow" alt="man with rocket on computer screen">
+    <img class="image shadow" src="../images/2.png" class="img shadow" alt="man with rocket on computer screen">
   </div>
   </div>
 
-  <h3 class="heading-line c-brown bg-white"><span class="uppercase">как проявляется</span></h3>
+  <h3 class="heading-line c-brown bg-white uppercase">как проявляется</h3>
 
   <div class="d-flex mt-20">
       <p class="col mr-30">Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора,
@@ -151,7 +151,7 @@
   <div class="container">
     <div class="d-flex">
       <div class="mr-30">
-        <img src="../images/3.png" alt="man have an idea">
+        <img class="image shadow" src="../images/3.png" alt="man have an idea">
       </div>
 
       <div>
@@ -172,7 +172,32 @@
   </div>
 </section>
 
-<section></section>
+<section id="hyperbolic-depreciation" class="pos-relative bg-brown bg-img">
+  <div class="container c-white">
+    <div class="d-flex">
+      <div class="mr-30">
+      <p class="paragraph fs-24 c-white-trans">Когнитивные искажения</p>
+      <h2 class="mb-30">Гиперболическое обесценивание</h2>
+      <p class="paragraph fs-34">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
+    </div>
+    <div>
+      <img class="image shadow" src="../images/4.png" class="img shadow" alt="man with rocket on computer screen">
+    </div>
+    </div>
+  
+    <h3 class="heading-line c-brown bg-white uppercase">как проявляется</h3>
+  
+    <div class="d-flex mt-20">
+        <p class="col mr-30">Вы когда-нибудь откладывали написание теста? Ловили себя на использовании клавиш-стрелок в Vim?
+          Поздравляю, у вас наблюдается гиперболическое обесценивание.
+        </p>
+        <p class="col">Немедленная выгода от использования чего-то быстродоступного значительно смягчает боль,
+          которую нужно перетерпеть, чтобы усвоить правильный синтаксис для перемещения на нужную строчку.
+          Но как только вы поймёте как перемещаться быстрее, выгода в будущем намного выше. В итоге вы сохраните много времени.
+        </p>
+    </div>
+    </div>
+</section>
 <section></section>
 </main>
 
