finished errors-in-planning section

--- a/src/index.html
+++ b/src/index.html
@@ -181,7 +181,7 @@
       <p class="paragraph fs-34">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
     </div>
     <div>
-      <img class="image shadow" src="../images/4.png" class="img shadow" alt="man with rocket on computer screen">
+      <img class="image shadow" src="../images/4.png" class="img shadow" alt="man looks at mountain">
     </div>
     </div>
   
@@ -198,7 +198,34 @@
     </div>
     </div>
 </section>
-<section></section>
+
+<section id="errors-in-planning" class="pos-relative bg-light bg-img">
+  <div class="container">
+    <div class="d-flex">
+      <div class="mr-30">
+        <img class="image shadow" src="../images/5.png" alt="man writing">
+      </div>
+
+      <div>
+        <p class="c-dark-trans paragraph fs-24">Когнитивные искажения</p>
+        <h2 class="mb-30">Ошибка планирования</h2>
+        <p class="paragraph fs-34">Неправильно рассчитывать время необходимое для завершения задачи.</p>
+      </div>
+    </div>
+    
+      <h3 class="heading-line c-white bg-brown uppercase">как проявляется</h3>
+      <div class="d-flex mt-20">
+        <p class="col mr-30">Одно из искажений, которое должно признать большинство из нас.
+            И менеджеры проекта, и сами пользователи продукта — все склонны ставить сроки, в которые невозможно закончить запланированное.
+        </p>
+
+        <div class="col">
+            <p>Это отлично выражается в старом афоризме:</p>
+            <p>Первые 90% готового кода отнимают первые 90% времени разработки. Оставшиеся 10% отнимают вторые 90% времени разработки.</p>
+        </div>
+    </div>
+  </div>
+</section>
 </main>
 
 <footer>
