--- a/src/index.html
+++ b/src/index.html
@@ -229,6 +229,35 @@
 </main>
 
 <footer>
+  <div class="container">
+    <div class="d-flex c-white bg-dark">
+      <div class="d-flex col mr-30 align-center">
+          <h2 class="mb-0 pl-55 c-white fs-34">Хотите узнать больше?<br>Подпишитесь на обновления</h2>
+      </div>
+
+      <div class="col">
+        <p class="mt-40 mb-10 fs-18">Электронная почта</p>
+        <form class="d-flex">
+            <input class="input-email fs-13" type="email" placeholder="Ваша электронная почта" size="50">
+            <button class="btn btn-icon"></button>                       
+        </form>
+        <p class="mb-40 fs-12">Подписываясь, вы принимаете <a href="#footer" class="c-white">правила сервиса</a></p>
+    </div>
+  </div>
+
+  <div class="mt-74 fs-14 text-center">
+    <p class="mb-14">
+        © 2020 Константин Константинопольский
+        <!-- © 2020 <a href="https://ru.hexlet.io/u/elig" target="_blank" class="color-link">Леонид Г</a> -->
+    </p>
+    <p class="mb-14">
+        По материалам статьи <a href="https://medium.com/hackernoon/cognitive-biases-in-programming-5e937707c27b" target="_blank" class="c-blue">Yash Ranadive Cognitive Biases in Programming</a>
+    </p>
+    <p class="mb-14">
+        <a href="https://ru.hexlet.io" target="_blank" class="c-blue">Курсы программирования Hexlet</a>
+    </p>
+</div>
+</div>
 
 </footer>
    
