--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
           </span>
           в программировании
         </h1>
-        <img class="header-img" src="../images/main.png" alt="Главная картинка">
+        <img class="header-img" src="./images/main.png" alt="Главная картинка">
         <div class="d-flex">
             <p class="col mr-30">Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. 
                 Но мы часто игнорируем целостную картинку. Некоторые из этих проблем малозаметны, некоторые существенны. 
@@ -78,19 +78,19 @@
       <p class="c-dark">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
     </a>
 
-    <a href="#" class="card bg-light mr-30 mt-20">
+    <a href="#distortion-of-novelty" class="card bg-light mr-30 mt-20">
       <p class="number">3</p>
       <h3 class="c-orange">Искажение новизны</h3>
       <p class="c-dark">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
     </a>
 
-    <a href="#" class="card bg-light mt-20 mr-30">
+    <a href="#hyperbolic-depreciation" class="card bg-light mt-20 mr-30">
       <p class="number">4</p>
       <h3 class="c-orange">Гиперболическое обесценивание</h3>
       <p class="c-dark">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
     </a>
 
-    <a href="#" class="card bg-light mt-20">
+    <a href="#errors-in-planning" class="card bg-light mt-20">
       <p class="number">5</p>
       <h3 class="c-orange">Ошибка планирования</h3>
       <p class="c-dark">Неправильно рассчитывать время необходимое для завершения задачи.</p>
@@ -102,7 +102,7 @@
   <div class="container">
     <div class="d-flex">
       <div class="mr-30">
-        <img src="../images/1.png" alt="two people looking at computer">
+        <img src="./images/1.png" alt="two people looking at computer">
       </div>
 
       <div>
@@ -130,7 +130,7 @@
     <p class="paragraph fs-34">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
   </div>
   <div>
-    <img class="image shadow" src="../images/2.png" class="img shadow" alt="man with rocket on computer screen">
+    <img class="image shadow" src="./images/2.png" class="img shadow" alt="man with rocket on computer screen">
   </div>
   </div>
 
@@ -151,7 +151,7 @@
   <div class="container">
     <div class="d-flex">
       <div class="mr-30">
-        <img class="image shadow" src="../images/3.png" alt="man have an idea">
+        <img class="image shadow" src="./images/3.png" alt="man have an idea">
       </div>
 
       <div>
@@ -181,7 +181,7 @@
       <p class="paragraph fs-34">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
     </div>
     <div>
-      <img class="image shadow" src="../images/4.png" class="img shadow" alt="man looks at mountain">
+      <img class="image shadow" src="./images/4.png" class="img shadow" alt="man looks at mountain">
     </div>
     </div>
   
@@ -203,7 +203,7 @@
   <div class="container">
     <div class="d-flex">
       <div class="mr-30">
-        <img class="image shadow" src="../images/5.png" alt="man writing">
+        <img class="image shadow" src="./images/5.png" alt="man writing">
       </div>
 
       <div>
