--- a/src/index.html
+++ b/src/index.html
@@ -53,48 +53,48 @@
 </section>
 
 <section id="navigation" class="bg-dark">
-  <nav class="mt-m200 pt-200 container d-flex justify-between flex-wrap">
-    <div class="mr-30">
-      <h2 class="p-right10 f-size52">
-        <span class="c-orange">5 когнитивных
-        <br> искажений</span> 
-        <br>
-      <span class="c-white">
-          о существовании <br>
-          которых стоит <br> 
-          помнить</span>
-        </h2>
-    </div>
+    <nav class="mt-m200 pt-200 container d-flex justify-between flex-wrap">
+      <div class="mr-30">
+          <h2 class="pr-9 fs-52"><span class="c-orange">5 когнитивных
+            <br> искажений</span> 
+            <br>
+          <span class="c-white">
+              о существовании <br>
+              которых стоит <br> 
+              помнить</span>
+          </h2>
+      </div>
 
-    <a href="#ikea-effect" class="card bg-light mr-10">
-      <p class="number">1</p>
-      <h3 class="c-orange">Эффект ИКЕА</h3>
-      <p class="c-dark">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
-    </a>
+      <a href="#ikea-effect" class="mr-30 card bg-light">
+          <p class="number">1</p>
+          <h3 class="c-orange">Эффект ИКЕА</h3>
+          <p class="c-dark">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+      </a>
+      
+      <a href="#premature-optimization" class="card bg-light">
+          <p class="number">2</p>
+          <h3 class="c-orange">Преждевременная оптимизация</h3>
+          <p class="mb-0 c-dark">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+      </a>
 
-    <a href="#premature-optimization" class="card bg-light">
-      <p class="number">2</p>
-      <h3 class="c-orange">Преждевременная оптимизация</h3>
-      <p class="c-dark">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
-    </a>
+      <a href="#distortion-of-novelty" class="mt-20 mr-30 card bg-light">
+          <p class="number">3</p>
+          <h3 class="c-orange">Искажение новизны</h3>
+          <p class="c-dark">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
+      </a>
 
-    <a href="#distortion-of-novelty" class="card bg-light mr-30 mt-20">
-      <p class="number">3</p>
-      <h3 class="c-orange">Искажение новизны</h3>
-      <p class="c-dark">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
-    </a>
+      <a href="#hyperbolic-depreciation" class="mt-20 mr-30 card bg-light">
+          <p class="number">4</p>
+          <h3 class="c-orange">Гиперболическое обесценивание</h3>
+          <p class="mb-0 c-dark">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
+      </a>
 
-    <a href="#hyperbolic-depreciation" class="card bg-light mt-20 mr-30">
-      <p class="number">4</p>
-      <h3 class="c-orange">Гиперболическое обесценивание</h3>
-      <p class="c-dark">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
-    </a>
+      <a href="#errors-in-planning" class="mt-20 card bg-light">
+          <p class="number">5</p>
+          <h3 class="c-orange">Ошибка планирования</h3>
+          <p class="c-dark">Неправильно рассчитываете время, необходимое для завершения задачи.</p>
+      </a>
 
-    <a href="#errors-in-planning" class="card bg-light mt-20">
-      <p class="number">5</p>
-      <h3 class="c-orange">Ошибка планирования</h3>
-      <p class="c-dark">Неправильно рассчитывать время необходимое для завершения задачи.</p>
-    </a>
   </nav>
 </section>
 
@@ -114,7 +114,7 @@
     
       <h3 class="heading-line c-white bg-brown uppercase">Как проявляется</h3>
 
-      <div class="d-flex mt-30">
+      <div class="d-flex mt-20">
       <p class="col mr-30">Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
       <p class="col">Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
     </div>
