--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,7 @@
   <div class="container">
     <div class="d-flex">
       <div class="mr-30">
-        <img src="./images/1.png" alt="two people looking at computer">
+        <img class="image shadow" src="./images/1.png" alt="two people looking at computer">
       </div>
 
       <div>
